# testn

./: .gitignore  Cargo.toml  Dockerfile  README.md  default.nix  result-2  shell.nix
.github/workflows/: basic.yml
in-vm/: Cargo.toml
in-vm/src/: main.rs
linux/: kernel.config
n-it/: Cargo.toml
n-it/src/: main.rs
n-vm/: Cargo.toml
n-vm-macros/: Cargo.toml
n-vm-macros/src/: lib.rs
n-vm/src/: lib.rs  main.rs
scratch/: Cargo.toml
scratch/src/: main.rs
test-init/: Cargo.toml
test-init/src/: utils.rs  vm-init.rs
testn_init/: Cargo.toml
testn_invm/: Cargo.toml
testn_invm/src/: main.rs
testnit/: Cargo.toml
testnit/src/: testnit.rs  utils.rs
testnvm/: Cargo.toml  notes.md
testnvm/src/: main.rs
