[workspace]

resolver = "3"

members = [
    "n-it",
    "n-vm",
]

[workspace.dependencies]

bollard = { version = "0.19.2", default-features = false, features = [] }
capctl = { version = "0.2.4", default-features = false, features = [] }
cloud-hypervisor-client = { version = "0.3.3", default-features = false, features = [] }
command-fds = { version = "0.3.2", default-features = false, features = [] }
nix = { version = "0.30.1", default-features = false, features = [] }
serde = { version = "1.0.219", default-features = false, features = [] }
serde_json = { version = "1.0.143", default-features = false, features = [] }
tokio = { version = "1", default-features = false, features = [] }
tokio-serde = { version = "0.9.0", default-features = false, features = [] }
tokio-stream = { version = "0.1.17", default-features = false, features = [] }
tokio-util = { version = "0.7.16", default-features = false, features = [] }
tokio-vsock = { version = "0.7.2", default-features = false, features = [] }
tracing = { version = "0.1.41", default-features = false, features = [] }
tracing-subscriber = { version = "0.3.20", default-features = false, features = [] }
vsock = { version = "0.5.1", default-features = false, features = [] }
