[package]
name = "n-vm-macros"
version = "0.0.5"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
proc-macro = true

[dependencies]

# external
proc-macro2 = { workspace = true, default-features = false, features = [] }
quote = { workspace = true, default-features = false, features = [] }
syn = { workspace = true, default-features = false, features = ["full"] }
